[REFACTOR] AuditTrailService filtering